--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -5,12 +5,14 @@
 }
 
 .menu__wrapper {
-    height: 217px;
     padding: 0 1.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 
     .menu__container {
-        height: 100%;
-        border: 1px solid red;
+        height: 217px;
+        width: 100%;
         position: relative;
 
         .menu__thumbnail {
@@ -31,7 +33,6 @@
         }
 
         .menu__info {
-            border: 1px solid red;
             height: 165px;
             background-color: var(--light);
 
@@ -47,7 +48,8 @@
                 flex-direction: column;
                 gap: 1rem;
                 align-items: center;
-                justify-content: center;
+                justify-content: flex-end;
+                padding-bottom: 22px;
 
                 h3 {
                     @include fonts(15px, 700, 20.5px);
@@ -70,5 +72,16 @@
                 }
             }
         }
+    }
+
+    @media screen and (min-width: 768px) {
+        flex-direction: row;
+        gap: 10px;
+        padding: 0 2.5rem;
+    }
+
+    @media screen and (min-width: 1140px) {
+        gap: 30px;
+        padding: 0 165px;
     }
 }
