--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -113,6 +113,7 @@
             position: initial;
             text-align: start;
             align-items: flex-start;
+            margin: 0;
         }
 
         .hero__image img {
