--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -35,6 +35,7 @@
         .menu__info {
             height: 165px;
             background-color: var(--light);
+            border-radius: 0.5rem;
 
             position: absolute;
             z-index: 1;
