--- a/src/components/HomeProducts/HomeProducts.scss
+++ b/src/components/HomeProducts/HomeProducts.scss
@@ -174,3 +174,34 @@
         }
     }
 }
+
+.speaker__wrapper {
+    height: 320px;
+    // overflow: hidden;
+
+    .speaker__image {
+        width: 100%;
+        height: 100%;
+        border-radius: 0.5rem;
+        overflow-y: hidden;
+        object-fit: cover;
+
+        img {
+            height: 100%;
+            object-fit: cover;
+            // width: 100%;
+            border-radius: 0.5rem;
+        }
+        
+    }
+
+    .speaker__info {
+        border: 2px solid orange;
+
+        h3 {
+            text-transform: uppercase;
+            @include fonts(28px, 700, 38px);
+            letter-spacing: 2px;
+        }
+    }
+}
