--- a/src/components/HomeProducts/HomeProducts.scss
+++ b/src/components/HomeProducts/HomeProducts.scss
@@ -177,31 +177,72 @@
 
 .speaker__wrapper {
     height: 320px;
-    // overflow: hidden;
+    position: relative;
 
     .speaker__image {
         width: 100%;
         height: 100%;
         border-radius: 0.5rem;
         overflow-y: hidden;
-        object-fit: cover;
 
         img {
             height: 100%;
-            object-fit: cover;
-            // width: 100%;
             border-radius: 0.5rem;
+            object-fit: cover;
+
+            @media screen and (min-width: 560px){
+                width: 100%;
+            }
+
+            @media screen and (min-width: 768px){
+                object-position: 50% 80%;
+                object-fit: cover;
+            }
+
+            @media screen and (min-width: 1140px){
+                object-position: 50% 80%;
+                object-fit: cover;
+            }
         }
-        
     }
 
     .speaker__info {
-        border: 2px solid orange;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        z-index: 2;
+        padding-left: 1.5rem;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        gap: 2rem;
+
+        @media screen and (min-width: 768px) {
+            padding-left: 62px; 
+        }
+
+        @media screen and (min-width: 1140px) {
+            padding-left: 95px; 
+        }
 
         h3 {
             text-transform: uppercase;
             @include fonts(28px, 700, 38px);
             letter-spacing: 2px;
+        }
+
+        button {
+            color: #000000;
+            background-color: transparent;
+            border: 1.5px solid black;
+
+            &:hover {
+                background-color: var(--dark);
+                color: #FFFFFF;
+            }
         }
     }
 }
