--- a/src/components/HomeProducts/HomeProducts.scss
+++ b/src/components/HomeProducts/HomeProducts.scss
@@ -183,7 +183,7 @@
         width: 100%;
         height: 100%;
         border-radius: 0.5rem;
-        overflow-y: hidden;
+        overflow: hidden;
 
         img {
             height: 100%;
@@ -243,6 +243,82 @@
                 background-color: var(--dark);
                 color: #FFFFFF;
             }
+        }
+    }
+}
+
+.earphones__wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+
+    .earphones__image {
+        width: 100%;
+        height: 200px;
+        border-radius: 0.5rem;
+
+        img {
+            height: 100%;
+            width: 100%;
+            border-radius: 0.5rem;
+            object-fit: cover;
+        }
+    }
+
+    .earphones__info {
+        height: 200px;
+        width: 100%;
+
+        padding: 1.5rem;
+        border-radius: 0.5rem;
+        
+        background-color: var(--light);
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        align-items: flex-start;
+        justify-content: center;
+
+        h3 {
+            text-transform: uppercase;
+            @include fonts(28px, 700, 38.25px);
+            letter-spacing: 2px;
+        }
+
+        button {
+            background-color: transparent;
+            border: 1.5px solid black;
+            color: #000000;
+
+            &:hover {
+                color: #FFFFFF;
+                background-color: var(--dark);
+            }
+        }
+    }
+
+    @media screen and (min-width: 768px) {
+        flex-direction: row;
+        gap: 10px;
+        flex: 1;
+
+        .earphones__image{
+            height: 320px;
+            width: 50%;
+        }
+        .earphones__info {
+            height: 320px;
+            width: 50%;
+            padding: 2.5rem;
+        }
+    }
+
+    @media screen and (min-width: 1140px) {
+        gap: 30px;
+
+        .earphones__info {
+            padding: 95px;
         }
     }
 }
