--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -15,16 +15,30 @@
 
     padding: 0 1.5rem 38px;
 
-    @media screen and (min-width: 768px) {
-        align-items: flex-start;
-    }
-
     hr {
         height: 4px;
         background-color: var(--orange);
         width: 101px;
         outline: none;
         border: none;
+    }
+
+    @media screen and (min-width: 768px) {
+        align-items: flex-start;
+        padding: 0 40px 46px;
+        gap: 0;
+
+        hr {
+            margin-bottom: 60px;
+        }
+    }
+
+    @media screen and (min-width: 1140px) {
+        padding: 0 165px 48px;
+
+        hr {
+            margin-bottom: 70px;
+        }
     }
 
     .footer__nav {
@@ -65,6 +79,8 @@
             align-items: flex-start;
             text-align: left;
             gap: 2rem;
+            margin-bottom: 2rem;
+
 
             .footer__ul {
                 .footer__menu {
@@ -72,6 +88,16 @@
                     gap: 34px;
                 }
             }
+        }
+
+        @media screen and (min-width: 1140px) {
+
+            // check ouit for errors
+            flex-direction: row;
+            gap: 0;
+            justify-content: space-between;
+            align-items: center;
+            border: 1px solid red;
         }
     }
 
@@ -113,6 +139,16 @@
                     }
                 }
                 
+            }
+        }
+
+        @media screen and (min-width: 768px) {
+            text-align: left;
+            gap: 80px;
+
+            .footer__copyright {
+                flex-direction: row;
+                justify-content: space-between;
             }
         }
     }
