Added ProductCard component

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,12 +17,18 @@
 
 .footer-banner {
   padding: 7.5rem 1.5rem;
-
-  
 }
 
 .menu {
   padding: 2.5rem 1.5rem 0 1.5rem;
+}
+
+.product-card {
+  display: flex;
+  gap: 120px;
+  flex-direction: column;
+
+  padding: 4rem 1.5rem 0 1.5rem;
 }
 
 @media screen and (min-width: 768px) {
