--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -4,9 +4,12 @@
     line-height: $line-height;
 }
 
+
 .product__container {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     gap: 2rem;
 
     .product__image-wrapper {
@@ -22,10 +25,16 @@
         }
     }
 
+    @media screen and (min-width: 768px) {
+        gap: 52px;
+    }
+
+
     .product__details {
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
         gap: 1.5rem;
         text-align: center;
 
@@ -38,6 +47,53 @@
         p {
             @include fonts(15px, 500, 25px);
             color: rgba(0,0,0, 0.5);
+        }
+
+        h4 {
+            @include fonts(14px, 400, 19.12px);
+            letter-spacing: 10px;
+            color: var(--orange);
+        }
+
+        @media screen and (min-width: 768px) {
+            max-width: 572px;
+            gap: 0;
+
+            h2 {
+                @include fonts(40px, 700, 44px);
+                letter-spacing: 1.43px;
+                margin-bottom: 2rem;
+            }
+
+            p {
+                margin-bottom: 1.5rem;
+            }
+
+            h4 {
+                margin-bottom: 1rem;
+            }
+        }
+    }
+
+    @media screen and (min-width: 1140px) {
+        flex-direction: row;
+        gap: 125px;
+
+        .product__image-wrapper {
+            min-width: 540px;
+            height: 560px;
+        }
+
+        .product__details {
+            width: auto;
+            max-width: none;
+            text-align: left;
+            justify-content: center;
+            align-items: flex-start;
+
+            p {
+                margin-bottom: 40px;
+            }
         }
     }
 }
