--- a/src/index.scss
+++ b/src/index.scss
@@ -23,14 +23,6 @@
   padding: 2.5rem 1.5rem 0 1.5rem;
 }
 
-.product-card {
-  display: flex;
-  gap: 120px;
-  flex-direction: column;
-
-  padding: 4rem 1.5rem 0 1.5rem;
-}
-
 @media screen and (min-width: 768px) {
   .footer-banner {
     padding: 6rem 2.5rem;
@@ -39,7 +31,6 @@
   .menu {
     padding: 6rem 2.5rem 0 2.5rem;
   }
-  
 }
 
 @media screen and (min-width: 1140px) {
@@ -50,4 +41,26 @@
   .menu {
     padding: 120px 165px 0 165px;
   }
+
+  .product-card .product__container:nth-child(even) {
+    flex-direction: row-reverse;
+  }
 }
+
+.product-card {
+  display: flex;
+  gap: 120px;
+  flex-direction: column;
+
+  padding: 4rem 1.5rem 0 1.5rem;
+
+  @media screen and (min-width: 768px) {
+      padding: 120px 40px 0 40px;
+  }
+
+  @media screen and (min-width: 1140px) {
+      padding: 160px 165px 0 165px;
+      gap: 10rem;
+  }
+}
+
